--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
     <label for="kdSlider" style="width: 200px; margin-right: 10px;">
         Kd: <span id="kdVal">0</span>
     </label>
-    <input type="range" id="kdSlider" min="0" max="2" step="0.01" value="0" style="flex: 1;">
+    <input type="range" id="kdSlider" min="0" max="1" step="0.01" value="0" style="flex: 1;">
 </div>
 
 <div style="width: 800px; margin: 0 auto; display: flex; align-items: center; margin-bottom: 20px;">
@@ -50,12 +50,17 @@
     <input type="range" id="disturbanceSlider" min="0" max="2" step="0.1" value="0" style="flex: 1;">
 </div>
 
-<div style="width: 800px; margin: 0 auto; margin-bottom: 20px;">
-    <canvas id="chart1" width="800" height="400" style="display: block; margin: 0 auto;"></canvas>
+<div style="width: 800px; margin: 0 auto; display: flex; align-items: center; margin-bottom: 20px;">
+    <button style="width: 800px" id="startButton">Uruchom Symulację</button>
 </div>
 
-<div style="width: 800px; margin: 0 auto;">
-    <canvas id="chart2" width="800" height="400" style="display: block; margin: 0 auto;"></canvas>
+<div style="width: 1200px; margin: 0 auto; margin-bottom: 20px; display: flex">
+    <div style="width: 600px">
+        <canvas id="chart1" width="600" height="400" style="display: block; margin: 0 auto;"></canvas>
+    </div>
+    <div style="width: 600px">
+        <canvas id="chart2" width="600" height="400" style="display: block; margin: 0 auto;"></canvas>
+    </div>
 </div>
 
 <script src="static/script.js"></script>
